# cooltest

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: autotest.rs  bottomup.rs  common.rs  constants.rs  distinguishers.rs  fastup.rs  main.rs  patterns.rs  polyup.rs  results.rs
