[package]
name = "cooltest"
version = "0.2.0"
edition = "2021"



[dependencies]
rand = "0.8"
rayon = "1.7"
clap = { version = "4.3", features = ["derive"] }
itertools="0.11"
pyo3 = { version = "0.19", optional = true, features = ["auto-initialize"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.16"
binomtest = "0.1"

[dev-dependencies]
float-cmp = "0.9.0"

[features]
scipy = ["pyo3"]
